--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "title": "WatchToken",
+  "title": "FoxFinance",
   "name": "watch-token",
   "version": "1.0.0",
-  "description": "Create a Widget for your ERC20 or BEP20 Token and share it with your users. Add your Token to DApp browsers or MetaMask.",
+  "description": "Create a Widget for your ERC20 or BEP20 Token and share it with your users. Add Fox Finance FOX on BSC to DApp browsers or MetaMask.",
   "scripts": {
     "lint": "eslint .vuepress",
     "lint:fix": "eslint .vuepress --fix",
@@ -12,13 +12,13 @@
   },
   "keywords": [],
   "bugs": {
-    "url": "https://github.com/vittominacori/watch-token/issues"
+    "url": "https://github.com/foxfinancebsc/watch-token/issues"
   },
   "license": "MIT",
-  "author": "Vittorio Minacori (https://github.com/vittominacori)",
+  "author": "Vittorio Minacori (https://github.com/foxfinancebsc)",
   "repository": {
     "type": "git",
-    "url": "https://github.com/vittominacori/watch-token.git"
+    "url": "https://github.com/foxfinancebsc/watch-token.git"
   },
   "dependencies": {
     "web3": "^1.3.4"
